force-app/main/default/objects/LancamentoRevoSeat__c/LancamentoRevoSeat__c.object-meta.xml
<CustomObject>
    <label>Lançamento Revo Seat</label>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lançamentos Revo Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>