force-app/main/default/objects/LancamentoRevoSeat__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lançamentos Revo Seats</relationshipLabel>
    <relationshipName>LancamentosRevoSeats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>