force-app/main/default/objects/LancamentoRevoSeat__c/fields/QuantidadeEfetiva__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeEfetiva__c</fullName>
    <formula>IF(ISPICKVAL(Tipo__c, &quot;Débito&quot;), Quantidade__c * -1, Quantidade__c)
+
IF(ISPICKVAL(Tipo__c, &quot;Saldo&quot;), SaldoAnterior__c * -1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Efetiva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>