force-app/main/default/objects/LancamentoRevoSeat__c/fields/SaldoAnterior__c.field-meta.xml
<CustomField>
    <fullName>SaldoAnterior__c</fullName>
    <label>Saldo Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>