force-app/main/default/objects/LancamentoRevoSeat__c/fields/ServicoOrigem__c.field-meta.xml
<CustomField>
    <fullName>ServicoOrigem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serviço Origem</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Lançamentos Revo Seats</relationshipLabel>
    <relationshipName>LancamentosRevoSeats</relationshipName>
    <type>Lookup</type>
</CustomField>