force-app/main/default/objects/LancamentoRevoSeat__c/fields/TipoFormatado__c.field-meta.xml
<CustomField>
    <fullName>TipoFormatado__c</fullName>
    <formula>CASE(
    Tipo__c,
    &quot;Crédito&quot;, &quot;➕🪙 Crédito&quot;,
    &quot;Débito&quot;,  &quot;➖🪙 Débito&quot;,
    &quot;Saldo&quot;,   &quot;🟰🪙 Saldo&quot;,
    &quot;❓ Outro&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>