force-app/main/default/objects/LancamentoRevoSeat__c/fields/VoucherDestino__c.field-meta.xml
<CustomField>
    <fullName>VoucherDestino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher Destino</label>
    <referenceTo>Pagamento__c</referenceTo>
    <relationshipLabel>Lançamentos Revo Seats</relationshipLabel>
    <relationshipName>LancamentosRevoSeats</relationshipName>
    <type>Lookup</type>
</CustomField>